@@ -1,5 +1,7 @@
 # -*- Mode: Makefile; tab-width: 8; indent-tabs-mode: t; -*-
 
+CLEANFILES = *~ .*.swp .*.swo
+
 if PLATFORM_WIN32
 no_undefined = -no-undefined
 GIMV_LIBS = -L$(top_builddir)/src -lgimv
